# knowls

./: .gitignore  Cargo.toml  README.md  build.sh  llm-removal.md
app/: Cargo.toml
app/src/: state.rs
app/src/agents/: error.rs  mod.rs
app/src/config/: agents.rs  database.rs  mod.rs
app/src/database/: mod.rs  thread.rs
app/src/handle/: requests.rs
app/src/ui/: agents.rs  database.rs  mod.rs
app/tests/app/: config.rs  database.rs  helpers.rs  notifications.rs
application/: Cargo.toml
application/src/: lsp.rs  main.rs  rpc.rs  rpc_handler.rs  state.rs  trace.rs
application/src/app/: connection.rs  mod.rs
application/src/app/tui/: mod.rs
application/src/app/tui/props/: database.rs  global.rs  knowledge.rs  mod.rs
application/src/database/: config.rs  mod.rs  models.rs  query_builder.rs
application/src/lsp/: completions.rs  definition.rs
application/src/tui/: action.rs  app.rs  cli.rs  components.rs  config.rs  errors.rs  logging.rs  mod.rs  tui.rs
application/src/tui/components/: connections.rs  database.rs  fps.rs  help.rs  home.rs  knowledge.rs  user_input.rs
docs/: contributing.md
lsp/: Cargo.toml  espx-ls.toml
lsp/src/: lib.rs
lsp/src/database/models/: agent_memories.rs
lsp/src/handle/buffer_operations/: operations.rs
lsp/src/interact/: registry.rs
lsp/src/server/: run.rs  socket.rs
server/: Cargo.toml  build_lsp_server.sh
server/src/: main.rs  server.rs  test.txt  trace.rs
src/: client.rs  error.rs  knowledge.rs  lib.rs  rpc.rs  scratch.rs  state.rs  telemetry.rs  trace.rs  util.rs
src/agents/: error.rs  inits.rs  mod.rs
src/config/: agents.rs  database.rs  mod.rs
src/database/: mod.rs  query_builder.rs  thread.rs
src/database/models/: agent_memories.rs  block.rs  mod.rs
src/handle/: diagnostics.rs  error.rs  mod.rs  notifications.rs  requests.rs
src/handle/buffer_operations/: channel.rs  error.rs  mod.rs  operations.rs
src/interact/: .agent.rs  .execution.rs  agent.rs  comment_str_map.rs  database.rs  error.rs  execution.rs  id.rs  lexer.rs  logic.rs  messages.rs  mod.rs  registry.rs  state.rs
src/interact/parsing/: comment_str_map.rs  comments.rs  lexer.rs  mod.rs  tokens.rs
src/interact/parsing/tokens/: mod.rs  vec.rs
src/knowledge/: mod.rs
src/knowledge/parsing/: comments.rs  lexer.rs
src/knowledge/parsing/tokens/: mod.rs  vec.rs
src/rpc/: messages.rs  mod.rs
src/rpc/lsp/: diagnostics.rs  mod.rs  notifications.rs  requests.rs
src/rpc/lsp/buffer_operations/: operations.rs
src/server/: connection.rs  diagnostics.rs  mod.rs  notifications.rs  requests.rs  run.rs  socket.rs  trace.rs
src/server/buffer_operations/: mod.rs  operations.rs
src/sockets/: cli.rs  client.rs  mod.rs  queue.rs  relay.rs  rpc.rs  server.rs  trace.rs
src/ui/: agents.rs  database.rs  documents.rs  home.rs  mod.rs
src/ui/cli/: mod.rs  new_tui.rs  user_input.rs
src/ui/cli/props/: agents.rs  database.rs  docs.rs  global.rs  mod.rs
src/ui/gui/: database.rs  mod.rs
src/ui/tui/: cli.rs  mod.rs
src/ui/tui/props/: agents.rs  database.rs  docs.rs  global.rs  mod.rs
src/util/: diff.rs  heap.rs  lru.rs  mod.rs  oneof.rs
testing/: Cargo.toml  test.txt
testing/src/: main.rs  test.txt
tests/app/: config.rs  database.rs  helpers.rs  main.rs  notifications.rs  test_docs.rs  tokens.rs
tests/lsp/: config.rs  database.rs  embeddings.rs  helpers.rs  main.rs  notifications.rs  requests.rs  sockets.rs  test_docs.rs  tokens.rs  util.rs
tests/scripts/: test_db.sh
