[package]
name = "espx_lsp_server"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"
 
[[bin]]
name = "headless"
path = "bin/headless.rs"

[[bin]]
name = "tui"
path = "bin/tui.rs"

[[bin]]
name = "relay"
path = "bin/relay.rs"


[dependencies]
anyhow = "1.0.86"
clap = {version = "4.5.7", features = ["derive", "env"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }

# espionox = "0.1.40"
espionox = {path = "../espionox"}


tokio = { version = "1.28.2", features = ["full"] }
dotenv = "0.15.0"
crossbeam-channel = "0.5.11"
surrealdb = {version = "2.0.2", features=['kv-rocksdb', 'protocol-http']}
toml = "0.8.12"
thiserror = "1.0.58"
futures = "0.3.30"
lsp-types = "0.97.0"
lsp-server = "0.7.6"
serde_json = "1.0.117"
serde = "1.0.203"
base64 = "0.22.1"

ratatui = { version = "0.29.0", features = ["crossterm"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
throbber-widgets-tui = "0.8.0"
fastembed = "4.3.0"

[profile.test]
panic='abort'

[build-dependencies]
cc="*"
