[package]
name = "knowls"
version = "0.1.0"
edition = "2021"
 
[lib]
path="src/lib.rs"

[workspace]
members = [
    # The LSP server that actually attaches to IDE
    "server",
    # The application running that hosts the knowledge
    "application",
]

[dependencies]
seraphic = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
lsp-server = {workspace=true}
lsp-types = {workspace=true}

[workspace.dependencies]
clap = {version = "4.5.7", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
]}
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
lsp-server = "0.7.6"
lsp-types = "0.97.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tokio = { version = "1.28.2", features = ["full"] }
dotenv = "0.15.0"
crossbeam-channel = "0.5.11"
toml = "0.8.12"
thiserror = "1.0.58"
futures = "0.3.30"
serde_json = "1.0.117"
serde = { version = "1.0.203" , features=["derive"] }
base64 = "0.22.1"
fastembed = "4.3.0"
seraphic = "0.1.55"

[profile.test]
panic='abort'

[build-dependencies]
cc="*"
