[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
knowls = {path="../"}
tokio = {workspace=true}
clap = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
futures = {workspace=true}
tracing = {workspace=true}
tracing-bunyan-formatter = {workspace=true}
tracing-log = {workspace=true}
tracing-subscriber = {workspace=true}
seraphic = {workspace=true}
surrealdb = {version = "2.0.2", features=['kv-rocksdb', 'kv-mem', 'protocol-http']}
ratatui = { version = "0.29.0", features = ["crossterm"] }
color-eyre = { version = "0.6.3"}
crossterm = { version = "0.28.1", features = ["event-stream", "serde"] }
throbber-widgets-tui = { version = "0.8.0" }
config = "0.15.7"
derived-deref = "2.1.0"
directories = "6.0.0"
tokio-util = "0.7.13"
strum = "0.26.3"
signal-hook = "0.3.17"
libc = "0.2.169"
strip-ansi-escapes = "0.2.1"
better-panic = "0.3.0"
tracing-error = "0.2.1"
