[package]
name = "server"
version = "0.1.0"
edition = "2021"




[dependencies]
knowls = {path="../"}
tokio = {workspace=true}
clap = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
tracing = {workspace=true}
tracing-bunyan-formatter = {workspace=true}
tracing-log = {workspace=true}
tracing-subscriber = {workspace=true}
seraphic = {workspace=true}
lsp-types = {workspace=true}
lsp-server = "0.7.6"
